--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -490,7 +490,7 @@ index:
 
       # 请求地址
       # Request url
-      url: "https://v1.hitokoto.cn/"
+      url: "https://v1.hitokoto.cn/?c=h&c=c&c=d&c=e&c=f&c=j&c=k"
 
       # 请求方法
       # Request method
