--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,11 +18,13 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/fluid.png
+# favicon: /img/fluid.png
+favicon: https://alpha-q3.sourcegcdn.com/2022/04/28/YudCB4pK.ico
 
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/fluid.png
+# apple_touch_icon: /img/fluid.png
+apple_touch_icon: https://alpha-q3.sourcegcdn.com/2022/04/28/YudCB4pK.ico
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
