--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -12,7 +12,7 @@ post:
   banner_img_height: 70
   default_index_img: https://alpha-q3.sourcegcdn.com/2022/08/15/mLhMRIoC.webp
 archive:
-  banner_img: https://alpha-q3.sourcegcdn.com/2022/08/15/j0ModMHP.jpg
+  banner_img: https://api.r10086.com/img-api.php?type=%E6%97%A5%E6%9C%ACCOS%E4%B8%AD%E5%9B%BDCOS
   banner_img_height: 80
   subtitle: null
 category:
