--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -3,7 +3,7 @@ navbar:
   ground_glass:
     enable: true
 index:
-  banner_img: https://api.vvhan.com/api/girl
+  banner_img: /images/uploads/wlop.jpeg
   banner_img_height: 100
   slogan:
     text: 这是一个演示博客,可以登陆后台实际测试效果
