--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -240,6 +240,9 @@ custom_js:
 # The usage is the same as custom_js
 custom_css: /css/ultra.css
 
+# 自定义底部 HTML 内容（位于 footer 上方），也可用于外部引入 js css 这些操作，注意不要和 post.custom 配置冲突
+custom_html: '<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/dplayer/1.26.0/DPlayer.min.js" type="application/javascript"></script>'
+
 # 网页访问统计
 # Analysis of website visitors
 web_analytics:  # 网页访问统计
