--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -241,7 +241,18 @@ custom_js:
 custom_css: /css/ultra.css
 
 # 自定义底部 HTML 内容（位于 footer 上方），也可用于外部引入 js css 这些操作，注意不要和 post.custom 配置冲突
-custom_html: '<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/dplayer/1.26.0/DPlayer.min.js" type="application/javascript"></script>'
+custom_html: '<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/dplayer/1.26.0/DPlayer.min.js" type="application/javascript">
+        let dock = document.getElementById("dp");
+        let du = dock.querySelector("video");
+        console.log(du.src);
+        const dp = new DPlayer({
+            container: dock,
+            video: {
+                url: du.src,
+                hotkey: true,
+            },
+        });
+</script>'
 
 # 网页访问统计
 # Analysis of website visitors
